# ghostmcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/apparmor/: ghostmcp.apparmor
deploy/container/: Dockerfile
deploy/systemd/: ghostmcp.service
ghostmcp/: __init__.py  config.py  logging_utils.py  rate_limit.py  scanners.py  security.py  server.py
tests/: test_e2e_mcp.py  test_integration_registration.py  test_rate_limit.py  test_scanners_runtime.py  test_security.py  test_server_controls.py  test_server_new_tools.py  test_server_registration.py  test_tool_signatures.py  test_workflows.py
